--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="intro" id="home">
             <div class="intro-text">
               <h1 class=""> Hello, I'm<br> Yizhu Zong </h1>
-              <p class="introduction">Freshly certificated as junior <strong> Full-stack web developer </strong> from <img src="./src/media/lewagon.png" alt="" width = "30px" loading="lazy"><a href="https://www.lewagon.com/" > Le Wagon</a> batch #441, I am Looking forward to working with interesting people, building amazing products together, and keeping learning and evolving for a lifetime! </p>
+              <p class="introduction">Freshly certificated as <strong> Full-stack web developer </strong> from <img src="./src/media/lewagon.png" alt="" width = "30px" loading="lazy"><a href="https://www.lewagon.com/" > Le Wagon</a> batch #441, with Data Science acknowledges and skills (batch #552), I am Looking forward to working with interesting people, building amazing products together, and keeping learning and evolving for a lifetime! </p>
             </div>
             <div class="chevron-down">
               <i class="fas fa-chevron-down"></i>
@@ -147,7 +147,10 @@
             <h2 >About</h2>
             <div class="space-line"></div>
             <p class="mt-5">
-              After 15 years of professional experience in international business development field as a buyer, I wanted to make a change of my career, to learn new skills and to follow my passion of internet technologies. That's why I began to learn coding, and decided to join <img src="./src/media/lewagon.png" alt="" width = "30px" loading="lazy"> <a href="https://www.lewagon.com/">le Wagon</a> bootcamp this summer to become a <strong>Full-stack developer</strong>. Start over from zero is not an easy decision, but a new adventure is always very exciting to me, and learning new things keeps my mind young and sharp!
+              After 15 years of professional experience in international business development field as a buyer, I wanted to make a change of my career, to learn new skills and to follow my passion of internet technologies. That's why I began to learn coding, and decided to join <img src="./src/media/lewagon.png" alt="" width = "30px" loading="lazy"> <a href="https://www.lewagon.com/">le Wagon</a> bootcamp in summer 2020 to become a <strong>Full-stack developer</strong>. Start over from zero is not an easy decision, but a new adventure is always very exciting to me, and learning new things keeps my mind young and sharp!
+            </p>
+            <p>
+              Right now I am luckly enrolled in the Women Data programme of Paris and joined le Wagon Data Science bootcamp in Jan 2021 batch#552. Very different experiences with Web-development, in data, the math has much more important weight. It is hard, but I am doing my best to understand how things work under the hood. And I believe that the data helps us to make better decisions cross all business fields, and it shows me a different way of seeing the world around me :)
             </p>
             <p>
               I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type! And I believe my <strong>diverse professional experiences</strong> from <strong>different industries</strong>, and my <strong>multicultural background</strong> can also bring you extra precious values.
@@ -236,6 +239,13 @@
           <div id="education">
             <h2>Education</h2>
             <div class="space-line"></div>
+
+            <div class="year pt-5"><h6 >2021</h6></div>
+            <div class="edu-info">
+              <h4 class="school">Le Wagon, #batch 552, France - <img src="./src/media/lewagon.png" loading="lazy" width = "30px" alt="wagon"></h4>
+              <p class="degree">Data Science</p>
+            </div>
+
             <div class="year pt-5"><h6 >2020</h6></div>
             <div class="edu-info">
               <h4 class="school">Le Wagon, #batch 441, France - <img src="./src/media/lewagon.png" loading="lazy" width = "30px" alt="wagon"></h4>
@@ -297,16 +307,17 @@
               <!-- skill show for professional skills -->
               <div class="tab-pane fade ml-3 d-flex flex-wrap" id="pro-skills" role="tabpanel" aria-labelledby="profile-tab">
                 <div class="skill-tab">Product Development</div>
-                <div class="skill-tab">Communication</div>
+                <div class="skill-tab">Data analysis</div>
                 <div class="skill-tab">Project Management</div>
+                <div class="skill-tab">Communication</div>
                 <div class="skill-tab">Negociation</div>
                 <div class="skill-tab">Cross-Culture</div>
                 <div class="skill-tab">International Sourcing</div>
-                <div class="skill-tab">Business Analysis</div>
+                <div class="skill-tab">Business development</div>
+                <div class="skill-tab">Marketing Research</div>
                 <div class="skill-tab">Training</div>
                 <div class="skill-tab">Contract</div>
                 <div class="skill-tab">Logistic</div>
-                <div class="skill-tab">Marketing Research</div>
               </div>
               <!-- end skill show for product management -->
             </div>
