--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="space-line-light"></div>
 
             <div id="project0" class="project-container mt-5">
-              <a href="https://gameclan.herokuapp.com/" target="_blank">
+              <a href="https://github.com/Agnes-Lain/Gamebook" target="_blank">
                 <div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1607588925/gamebook_home_c2oxcg.png')"></div>
                 <div id="project0-info">
                   <p>Build your own Gamebook to share and to play with your friends! </p>
@@ -185,7 +185,7 @@
             </div>
 
             <div id="project1" class="project-container mt-5">
-              <a href="http://www.commithood.com" target="_blank">
+              <a href="https://github.com/Mafiews/Commithood" target="_blank">
                 <div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/commit_hood_full_voxana.png')"></div>
                 <div id="project1-info">
                   <p>Make a commitment to improve your neighborhood! </p>
@@ -201,7 +201,7 @@
             </div>
 
             <div id="project2" class="mt-5 project-container">
-              <a href="https://cocktail-lovers-2046.herokuapp.com" target="_blank">
+              <a href="https://github.com/Agnes-Lain/rails-mister-cocktail" target="_blank">
                 <div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/cocktail_2046_fswrva.png')"></div>
                 <div id="project2-info">
                   <p>Creat your own cocktail collection and recipes!</p>
@@ -218,7 +218,7 @@
             </div>
 
             <div id="project3" class="mt-5 project-container">
-              <a href="https://bikery.herokuapp.com" target="_blank">
+              <a href="https://github.com/Mafiews/Bikery" target="_blank">
                 <div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/bikery_full_hxwbcw.png')"></div>
                 <div id="project3-info">
                   <p>F*ck the cars and rent your bike today! </p>
