add link to codewars

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="intro" id="home">
             <div class="intro-text">
               <h1 class=""> Hello, I'm<br> Yizhu </h1>
-              <img src="https://www.codewars.com/users/Agnes-Lain/badges/small" alt="codewars budge">
+              <a href="https://www.codewars.com/users/Agnes-Lain"><img src="https://www.codewars.com/users/Agnes-Lain/badges/small" alt="codewars budge"></a>
               <p class="introduction">Certificated <strong> Full-stack web developer </strong> with
                 <strong>Data Science ackowledges & skills</strong> from
                 <img src="./src/media/lewagon.png" alt="" width = "30px" loading="lazy"><a href="https://www.lewagon.com/" > Le Wagon.</a>
